welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:1: error: ';' expected but ')' found.
override def run(){repMotif())}
                             ^